feat: shake off unused css

--- a/src/search/search.less
+++ b/src/search/search.less
@@ -4,3 +4,10 @@
   display: flex;
   transition :transform 1s;
 }
+
+.unuse-css {
+  font-size: 201px;
+  color: rgb(75, 28, 119);
+  display: block;
+  transition :transform 12s;
+}
